# stm32f4_freertos_driver

./: CMakeLists.txt  gcc-arm-none-eabi.cmake
driver/inc/: common.h
driver/inc/hardware/: gpio.h
driver/src/: gpio.c
src/: main.c
